Kind inference and cleanup

--- a/purely-functional.cabal
+++ b/purely-functional.cabal
@@ -24,15 +24,19 @@ library
     import: shared
     hs-source-dirs: src
     exposed-modules:
-        PF.Check.Kind
-        PF.Check.Subst
-        PF.Check.Type
-        PF.Check.Unify
+        PF.Check.Infer
         PF.Compile.LambdaLift
         PF.Compile.Linearise
         PF.Expr.In
         PF.Expr.LambdaLifted
         PF.Expr.Linearised
+        PF.Unify.Data.Env
+        PF.Unify.Data.Kind
+        PF.Unify.Data.Type
+        PF.Unify.InferKind
+        PF.Unify.Kind
+        PF.Unify.Subst
+        PF.Unify.Type
 
 test-suite purely-functional-test
     import: shared
