--- a/purely-functional.cabal
+++ b/purely-functional.cabal
@@ -8,6 +8,7 @@ common shared
     default-extensions:
         DerivingVia,
         OverloadedStrings,
+        RecordWildCards,
     build-depends:
         base,
         comonad,
